third_party/move/tools/move-decompiler/tests/compiler-v2-test/folding/constant_folding_addresses.exp
module 0x8675309::M {
    fun const_addr(): address {
        0x1234
    }
    fun const_addr_let(): address {
        0x1234
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: cannot return `u16|u32|u64|u128|u256` from a function with result type `address`
  ┌─ constant_folding_addresses.move:3:9
  │
3 │         0x1234
  │         ^^^^^^

error: cannot return `u16|u32|u64|u128|u256` from a function with result type `address`
  ┌─ constant_folding_addresses.move:6:9
  │
6 │         0x1234
  │         ^^^^^^
